# icyStdLib

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  UpdateProjectSrcs.sh  enable-private-submodule.sh  fi-BuildConfig.h  fi-projdir-BuildConfig.h  icyStdLib.vcxproj  icyStdLib.vcxproj.filters  samples.sln  samples.vcxproj  samples.vcxproj.filters  srclist_icystdlib.msbuild
icy-app-glue/: fi-icyglue-BuildConfig.h  gisty_assert.h  icy_assert.h  icy_log.h
inc/: StringTokenizer.h  StringUtil.h  defer.h  fi-platform-defines.h  fi-pragma-todo.h  fi-printf-redirect.h  fs.h  jfmt.h  logger_local_buffer.h  msw_app_console_init.h  posix_file.h
samples/: tests_main.cpp
src/: ConfigFileParser.h  StringTokenizer.h  StringUtil.cpp  StringUtil.h  filesystem.msw.cpp  fs.cpp  fs.h  logger_local_buffer.cpp  msw-printf-stdout.cpp  msw_app_console_init.cpp  posix_file.cpp
